# xc3fr-unlock-kit-balance

./: Cargo.toml  README.md  build.sh  patch_bdat.py
cfg/: lang_gb.toml  locations.toml  unlocks.toml
src/: config.rs  hooks.rs  lib.rs
