[package]
name = "xc3fr-unlock-kit-balance"
version = "0.2.0-rc.1"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2021"
license = "gpl-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }

[features]
# Enable to crash on item interactions without a character associated to them.
# Useful to find uncovered functions, but it will also crash every time a legacy (non-character
# specific) item is picked up.
debug-invalid-chr = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
